objects/Groups__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>GroupId__c</fullName>
        <label>GroupId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queue_Type__c</fullName>
        <label>Queue Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Groups</label>
</CustomObject>